@@ -147,6 +147,8 @@ Also distro branches or revision numbers can be specified for each package group
 .SS "[submit] section"
 .IP "\fBhost = HOST\fP"
 Defines the default host in which \fBrepsys submit\fP will run the submit helper.
+.IP "\fBport = PORT\fP"
+Defines the port number used to connect to the submit host. Defaults to 22.
 .IP "\fBdefault = TARGET\fP"
 The default target to be used in \fBrepsys submit\fP when the option \-t is not used.
 .SS "[submit TARGET] sections (server\-side only)"
