@@ -1,3 +1,6 @@
+* Development
+- allow setting the port used to connect to the submit host
+
 * 1.9
 - really fixed -M
 - new command log: shows the svn log for a given package
